--- a/playbooks/csi.yml
+++ b/playbooks/csi.yml
@@ -13,7 +13,7 @@
 # under the License.
 
 - hosts: controllers
-  strategy: "{{ atmosphere_custom_ansible_strategy | default('ansible.builtin.linear') }}"
+  strategy: "{{ atmosphere_custom_ansible_strategy | default('serverscom.mitogen.mitogen_linear') }}"
   become: true
   roles:
     - role: csi
