--- a/molecule/aio/molecule.yml
+++ b/molecule/aio/molecule.yml
@@ -23,7 +23,7 @@ driver:
     ansible_connection_options:
       ansible_connection: ssh
       ansible_ssh_common_args: "-o ControlMaster=auto -o ControlPersist=60s"
-      pipelining: True
+      pipelining: "True"
 platforms:
   - name: instance
     groups:
