--- a/molecule/aio/molecule.yml
+++ b/molecule/aio/molecule.yml
@@ -22,8 +22,6 @@ driver:
     managed: False
     ansible_connection_options:
       ansible_connection: ssh
-      ansible_ssh_common_args: "-o ControlMaster=auto -o ControlPersist=60s"
-      pipelining: "True"
 platforms:
   - name: instance
     groups:
@@ -40,6 +38,9 @@ provisioner:
       # strategy: serverscom.mitogen.mitogen_linear
       roles_path: "/root/.ansible/collections/ansible_collections/vexxhost/atmosphere/roles"
       host_key_checking: False
+    ssh_connection:
+      ssh_args: '-o ControlMaster=auto -o ControlPersist=60s'
+      pipelining: True
     tags:
       run: ${ATMOSPHERE_ANSIBLE_TAGS-all}
   options:
