--- a/molecule/aio/prepare.yml
+++ b/molecule/aio/prepare.yml
@@ -14,6 +14,7 @@
 
 - name: Prepare systems for CI
   hosts: all
+  connection: local
   tasks:
     - name: Configure short hostname
       ansible.builtin.hostname:
