--- a/molecule/aio/molecule.yml
+++ b/molecule/aio/molecule.yml
@@ -21,6 +21,7 @@ driver:
   options:
     managed: False
     ansible_connection_options:
+      ansible_become: "true"
       ansible_connection: ssh
 platforms:
   - name: instance
@@ -39,7 +40,6 @@ provisioner:
       roles_path: "/root/.ansible/collections/ansible_collections/vexxhost/atmosphere/roles"
       host_key_checking: False
     ssh_connection:
-      ssh_args: '-o ControlMaster=auto -o ControlPersist=60s'
       pipelining: True
     tags:
       run: ${ATMOSPHERE_ANSIBLE_TAGS-all}
