--- a/molecule/aio/molecule.yml
+++ b/molecule/aio/molecule.yml
@@ -40,6 +40,8 @@ provisioner:
       roles_path: "/root/.ansible/collections/ansible_collections/vexxhost/atmosphere/roles"
       host_key_checking: False
     ssh_connection:
+      ssh_args: "-o ControlMaster=auto -o ControlPersist=600"
+      control_path: "~/.ssh/multiplexing/ansible-ssh-%%r@%%h:%%p"
       pipelining: True
     tags:
       run: ${ATMOSPHERE_ANSIBLE_TAGS-all}
