--- a/molecule/aio/molecule.yml
+++ b/molecule/aio/molecule.yml
@@ -41,7 +41,7 @@ provisioner:
       host_key_checking: False
     ssh_connection:
       ssh_args: "-o ControlMaster=auto -o ControlPersist=600"
-      control_path: "/tmp/multiplexing/ansible-ssh-%%r@%%h:%%p"
+      control_path: "/tmp/ansible-ssh-%%r@%%h:%%p"
       pipelining: True
     tags:
       run: ${ATMOSPHERE_ANSIBLE_TAGS-all}
