feat: switch to latest tag
Signed-off-by: Tadas Sutkaitis <tadas.sutkaitis@vexxhost.com>

--- a/roles/openstack_exporter/vars/main.yml
+++ b/roles/openstack_exporter/vars/main.yml
@@ -5,5 +5,6 @@ _openstack_exporter_default_args:
   - --endpoint-type=internal
   - default
   - --collect-metric-time
+  - --cache
   - --disable-metric=neutron-l3_agent_of_router
   - --disable-service.load-balancer
