fix: set helm hook annotation in octavia
Signed-off-by: okozachenko <okozachenko@vexxhost.com>

--- a/roles/octavia/vars/main.yml
+++ b/roles/octavia/vars/main.yml
@@ -13,6 +13,9 @@
 # under the License.
 
 _octavia_helm_values:
+  # NOTE(okozachenko): remove this line once https://review.opendev.org/c/openstack/openstack-helm/+/965887
+  #                    is merged.
+  helm3_hook: true
   endpoints: "{{ openstack_helm_endpoints }}"
   images:
     tags: "{{ atmosphere_images | vexxhost.atmosphere.openstack_helm_image_tags('octavia') }}"
