Add openstack resource controller image and version (#3174)
Signed-off-by: Michiel Piscaer <michiel@piscaer.com>
Co-authored-by: Mohammed Naser <mnaser@vexxhost.com>
(cherry picked from commit 91815c9b01507d81cd834fb1f46f4b847ce2e41d)

--- a/roles/defaults/vars/main.yml
+++ b/roles/defaults/vars/main.yml
@@ -185,6 +185,7 @@ _atmosphere_images:
   octavia_housekeeping: "{{ atmosphere_image_prefix }}registry.atmosphere.dev/library/octavia:{{ atmosphere_release }}"
   octavia_worker: "{{ atmosphere_image_prefix }}registry.atmosphere.dev/library/octavia:{{ atmosphere_release }}"
   openstack_cli: "{{ atmosphere_image_prefix }}registry.atmosphere.dev/library/python-openstackclient:{{ atmosphere_release }}"
+  openstack_resource_controller: "{{ atmosphere_image_prefix }}quay.io/orc/openstack-resource-controller:v2.2.0"
   openvswitch_db_server: "{{ atmosphere_image_prefix }}ghcr.io/vexxhost/openvswitch:v3.3.6-6"
   openvswitch_vswitchd: "{{ atmosphere_image_prefix }}ghcr.io/vexxhost/openvswitch:v3.3.6-6"
   ovn_controller: "{{ atmosphere_image_prefix }}registry.atmosphere.dev/library/ovn-host:{{ atmosphere_release }}"
