--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -142,3 +142,5 @@ jobs:
           scenario: aio
           network_backend: ${{ matrix.network_backend }}
           depot_build_id: ${{ needs.images.outputs.build-id }}
+        env:
+          ATMOSPHERE_DEBUG: true
