--- a/roles/glance_image/tasks/main.yml
+++ b/roles/glance_image/tasks/main.yml
@@ -17,6 +17,7 @@
   openstack.cloud.image_info:
     cloud: atmosphere
     image: "{{ glance_image_name }}"
+    sdk_log_level: DEBUG
   register: _image_info
   # NOTE(mnaser): This often fails since the SSL certificates are not
   #               ready yet. We need to wait for them to be ready.
