chore: Add mixed-line-ending hook to standardize line endings
Enforces Unix-style (LF) line endings across the repository and fixes
existing files with CRLF line endings to prevent ^M characters in commits.

This change also fixes existing files that had CRLF line endings:
- molecule/default/group_vars/all/molecule.yml
- molecule/image-manifest/requirements.yml
- releasenotes/notes/enable-auth-token-cache-in-rook-9e15863e87fbe4ba.yaml
- releasenotes/notes/fix-oauth2-proxy-jwt-auth-e0c2ed43a7da6cb3.yaml
- roles/ingress/templates/ingress.yml.j2
- roles/secretgen_controller/templates/release.yml.tpl

Signed-off-by: Yaguang Tang <yaguang.tang@vexxhost.com>

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -25,6 +25,8 @@ repos:
         files: ^.github/styles/config/vocabularies/Base/accept.txt$
       - id: trailing-whitespace
         exclude: ^images/.*/patches/.*\.patch$
+      - id: mixed-line-ending
+        args: ['--fix=lf']
 
   - repo: https://github.com/psf/black
     rev: 24.4.0
