--- a/roles/glance_image/tasks/main.yml
+++ b/roles/glance_image/tasks/main.yml
@@ -18,6 +18,8 @@
     cloud: atmosphere
     image: "{{ glance_image_name }}"
     sdk_log_level: DEBUG
+  environment:
+    OS_IMAGE_API_VERSION: 2
   register: _image_info
   # NOTE(mnaser): This often fails since the SSL certificates are not
   #               ready yet. We need to wait for them to be ready.
