--- a/roles/glance_image/tasks/main.yml
+++ b/roles/glance_image/tasks/main.yml
@@ -11,6 +11,14 @@
 # WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
 # License for the specific language governing permissions and limitations
 # under the License.
+#
+- name: Log for barbican
+  kubernetes.core.k8s_log:
+    namespace: openstack
+    label_selectors:
+      - application=barbican
+      - component=api
+  register: log
 
 - name: Check if image exists
   run_once: true
