--- a/charts/barbican/values.yaml
+++ b/charts/barbican/values.yaml
@@ -358,6 +358,8 @@ conf:
       key-manager: service/security/keymanager
   barbican_api_uwsgi:
     uwsgi:
+      plugin: python3
+      module: barbican.wsgi.api:application
       add-header: "Connection: close"
       buffer-size: 65535
       chunked-input-limit: "4096000"
@@ -376,7 +378,6 @@ conf:
       socket-timeout: 10
       thunder-lock: true
       worker-reload-mercy: 80
-      wsgi-file: /var/lib/openstack/bin/barbican-wsgi-api
       processes: 1
   barbican:
     DEFAULT:
