--- a/images/openstack-venv-builder/Dockerfile
+++ b/images/openstack-venv-builder/Dockerfile
@@ -33,8 +33,11 @@ COPY --from=ghcr.io/astral-sh/uv:latest /uv /uvx /bin/
 COPY --from=requirements --link /upper-constraints.txt /upper-constraints.txt
 RUN --mount=type=cache,target=/root/.cache/uv <<EOF bash -xe
 uv cache clean uwsgi
+uv cache prune
+uv cache clean
 uv venv --system-site-packages /var/lib/openstack
-uv pip install \
+uv pip uninstall uwsgi
+uv --no-cache pip install \
     --constraint /upper-constraints.txt \
         confluent-kafka \
         cryptography \
