Use uv --refresh with pip
Change-Id: Ia0244c35c64acb4477d9ceb1958e0e6c9b6a05b2
Signed-off-by: ricolin <rlin@vexxhost.com>
(cherry picked from commit fa12450ec68234a25c0bcfa754dc1d349b07a589)

--- a/images/openstack-venv-builder/Dockerfile
+++ b/images/openstack-venv-builder/Dockerfile
@@ -32,9 +32,8 @@ EOF
 COPY --from=ghcr.io/astral-sh/uv:latest /uv /uvx /bin/
 COPY --from=requirements --link /upper-constraints.txt /upper-constraints.txt
 RUN --mount=type=cache,target=/root/.cache/uv <<EOF bash -xe
-uv cache clean uwsgi
 uv venv --system-site-packages /var/lib/openstack
-uv pip install \
+uv pip install --refresh \
     --constraint /upper-constraints.txt \
         confluent-kafka \
         cryptography \
