fix: remove hardcoded backup image from database documentation (#3190)
Signed-off-by: donnyao <ao.donny@gmail.com>
Signed-off-by: Tadas Sutkaitis <tadas.sutkaitis@vexxhost.com>
Co-authored-by: Tadas Sutkaitis <tadas.sutkaitis@vexxhost.com>
(cherry picked from commit bdd5f6fb0e949ca7f318072d3cc1e688dbca8087)

--- a/roles/defaults/vars/main.yml
+++ b/roles/defaults/vars/main.yml
@@ -202,6 +202,7 @@ _atmosphere_images:
   percona_xtradb_cluster_haproxy: "{{ atmosphere_image_prefix }}docker.io/percona/haproxy:2.8.14"
   percona_xtradb_cluster_operator: "{{ atmosphere_image_prefix }}docker.io/percona/percona-xtradb-cluster-operator:1.17.0"
   percona_xtradb_cluster: "{{ atmosphere_image_prefix }}docker.io/percona/percona-xtradb-cluster:8.0.41-32.1"
+  percona_xtradb_cluster_backup: "{{ atmosphere_image_prefix }}docker.io/percona/percona-xtradb-cluster-operator:1.17.0-pxc8.0-backup-pxb8.0.35"
   placement_db_sync: "{{ atmosphere_image_prefix }}registry.atmosphere.dev/library/placement:{{ atmosphere_release }}"
   placement: "{{ atmosphere_image_prefix }}registry.atmosphere.dev/library/placement:{{ atmosphere_release }}"
   pod_tls_sidecar: "{{ atmosphere_image_prefix }}registry.atmosphere.dev/library/pod-tls-sidecar:latest"
