--- a/roles/magnum/meta/main.yml
+++ b/roles/magnum/meta/main.yml
@@ -47,3 +47,5 @@ dependencies:
         openstack-control-plane: enabled
       openstack_resource_controller_image: "{{ atmosphere_images['openstack_resource_controller'] | vexxhost.kubernetes.docker_image('name') }}"
       openstack_resource_controller_image_tag: "{{ atmosphere_images['openstack_resource_controller'] | vexxhost.kubernetes.docker_image('tag') }}"
+      openstack_resource_controller_node_selector:
+        openstack-control-plane: enabled
