[Barbican]Add gunicorn support
Change-Id: Ief7395ea5bd3a16a32010e00342ffff98a9e9316
Signed-off-by: ricolin <rlin@vexxhost.com>

--- a/charts/barbican/templates/configmap-bin.yaml
+++ b/charts/barbican/templates/configmap-bin.yaml
@@ -48,4 +48,8 @@ data:
 {{- include "helm-toolkit.scripts.rabbit_init" . | indent 4 }}
   simple_crypto_kek_rewrap.py: |
 {{ tuple "bin/_simple_crypto_kek_rewrap.py.tpl" . | include "helm-toolkit.utils.template" | indent 4 }}
+{{- if eq "gunicorn" .Values.wsgi.backend }}
+  gunicorn.conf.py: |
+{{ tuple "bin/_gunicorn.conf.py.tpl" . | include "helm-toolkit.utils.template" | indent 4 }}
+{{- end }}
 {{- end }}
