--- a/charts/barbican/values.yaml
+++ b/charts/barbican/values.yaml
@@ -708,6 +708,9 @@ tls:
   oslo_messaging: false
   oslo_db: false
 
+wsgi:
+  backend: uwsgi
+
 manifests:
   certificates: false
   configmap_bin: true
