--- a/molecule/aio/group_vars/all/molecule.yml
+++ b/molecule/aio/group_vars/all/molecule.yml
@@ -55,6 +55,8 @@ barbican_helm_values:
   pod:
     replicas:
       api: 1
+  wsgi:
+    gunicorn_cmd_args: "--workers=4"
 
 rook_ceph_cluster_radosgw_spec:
   metadataPool:
