--- a/roles/barbican/vars/main.yml
+++ b/roles/barbican/vars/main.yml
@@ -45,7 +45,8 @@ _barbican_helm_values:
           priority: 0
           apply-to: all
           pattern: '^(?!(amq\.|reply_)).*'
-
+  wsgi:
+    backend: gunicorn
   manifests:
     ingress_api: false
     service_ingress_api: false
