fix: Deploy ORC components in control-plane (#3214)
Signed-off-by: Dong Ma <dong.ma@vexxhost.com>
(cherry picked from commit ed718b285552352f044ca47313b84ef91e78189b)

--- a/roles/magnum/meta/main.yml
+++ b/roles/magnum/meta/main.yml
@@ -45,3 +45,5 @@ dependencies:
       cluster_api_infrastructure_version: 0.12.4
       cluster_api_node_selector:
         openstack-control-plane: enabled
+      openstack_resource_controller_node_selector:
+        openstack-control-plane: enabled
