--- a/roles/cinder/vars/main.yml
+++ b/roles/cinder/vars/main.yml
@@ -71,6 +71,14 @@ __cinder_helm_values:
           priority: 0
           apply-to: all
           pattern: '^(?!(amq\.|reply_)).*'
+  secrets:
+    identity:
+      admin: cinder-keystone-admin
+      cinder: cinder-keystone-user
+      glance: cinder-keystone-glance
+      nova: cinder-keystone-nova
+      swift: cinder-keystone-swift
+      service: cinder-keystone-service
   manifests:
     ingress_api: false
     job_clean: false
