--- a/roles/neutron/vars/main.yml
+++ b/roles/neutron/vars/main.yml
@@ -112,11 +112,13 @@ __neutron_ovn_helm_values:
       ovn:
         ovn_emit_need_to_frag: true
       service_providers:
-        service_provider: VPN:strongswan:neutron_vpnaas.services.vpn.service_drivers.ovn_ipsec.IPsecOvnVPNDriver:default
+        service_provider: VPN:strongswan:neutron_vpnaas.services.vpn.service_drivers.ovn_ipsec.IPsecOvnVPNDriver
     ovn_metadata_agent:
       DEFAULT:
         metadata_proxy_shared_secret: "{{ openstack_helm_endpoints['compute_metadata']['secret'] }}"
     ovn_vpn_agent:
+      DEFAULT:
+        interface_driver = neutron.agent.linux.interface.OVSInterfaceDriver
       AGENT:
         extensions: vpnaas
       vpnagent:
