Target default path change
Change-Id: Ic6e0b41244d5001ade8a153380e9d2ca4365b086
Signed-off-by: ricolin <rlin@vexxhost.com>

--- a/roles/ovn/vars/main.yml
+++ b/roles/ovn/vars/main.yml
@@ -30,8 +30,10 @@ _ovn_helm_values:
       node_selector_value: enabled
   volume:
     ovn_ovsdb_nb:
+      path: /etc/ovn
       size: 20Gi
     ovn_ovsdb_sb:
+      path: /etc/ovn
       size: 20Gi
   conf:
     ovn_bgp_agent:
