--- a/galaxy.yml
+++ b/galaxy.yml
@@ -1,6 +1,6 @@
 namespace: vexxhost
 name: atmosphere
-version: 7.0.0-beta.3
+version: 7.0.0
 readme: README.md
 authors:
   - Mohammed Naser <mnaser@vexxhost.com>
