add depot debug
Signed-off-by: Mohammed Naser <mnaser@vexxhost.com>

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -9,6 +9,9 @@ on:
 
 permissions: {}
 
+env:
+  DEPOT_DEBUG: "true"
+
 jobs:
   cargo:
     uses: vexxhost/github-actions/.github/workflows/cargo.yml@d240297ac3f2162871403fea1074360da43d4585 # main
