Fix the ci error
Signed-off-by: Dong Ma <dong.ma@vexxhost.com>

--- a/roles/openstacksdk/tasks/main.yml
+++ b/roles/openstacksdk/tasks/main.yml
@@ -42,7 +42,7 @@
 
     - name: Install openstacksdk using package manager
       ansible.builtin.package:
-        - python3-openstacksdk
+        name: python3-openstacksdk
 
 - name: Create openstack config directory
   become: true
