--- a/images/manila/Dockerfile
+++ b/images/manila/Dockerfile
@@ -18,7 +18,8 @@ FROM openstack-python-runtime
 RUN <<EOF bash -xe
 apt-get update -qq
 apt-get install -qq -y --no-install-recommends \
-    iproute2 openvswitch-switch
+    iproute2 openvswitch-switch \
+    python3-ceph-argparse python3-rados
 apt-get clean
 rm -rf /var/lib/apt/lists/*
 EOF
