--- a/roles/defaults/vars/main.yml
+++ b/roles/defaults/vars/main.yml
@@ -192,12 +192,12 @@ _atmosphere_images:
   openvswitch_db_server: "{{ atmosphere_image_prefix }}ghcr.io/vexxhost/openvswitch:v3.3.6-6"
   openvswitch_vswitchd: "{{ atmosphere_image_prefix }}ghcr.io/vexxhost/openvswitch:v3.3.6-6"
   ovn_bgp_agent: "{{ atmosphere_image_prefix }}ghcr.io/vexxhost/ovn-bgp-agent:main@sha256:98f80380aec29ea1cedd9a923edb411706fb7528bfe13daae6dd086e40997d55"
-  ovn_controller: "{{ atmosphere_image_prefix }}registry.atmosphere.dev/library/ovn-host:{{ atmosphere_release }}"
-  ovn_controller_kubectl: "{{ atmosphere_image_prefix }}registry.atmosphere.dev/library/ovn-host:{{ atmosphere_release }}"
+  ovn_controller: "{{ atmosphere_image_prefix }}ghcr.io/vexxhost/ovn:v24.03.7-3@sha256:deb1966eff94d8da072a3647db63546722094deb3ef34b6b464609bcba61887a"
+  ovn_controller_kubectl: "{{ atmosphere_image_prefix }}ghcr.io/vexxhost/ovn:v24.03.7-3@sha256:deb1966eff94d8da072a3647db63546722094deb3ef34b6b464609bcba61887a"
   ovn_logging_parser: "{{ atmosphere_image_prefix }}ghcr.io/vexxhost/neutron:main@sha256:55f9c67dda4cc7082739eea7cb21810862a56aac6fe8107a5f31627c601ab23e"
-  ovn_northd: "{{ atmosphere_image_prefix }}registry.atmosphere.dev/library/ovn-central:{{ atmosphere_release }}"
-  ovn_ovsdb_nb: "{{ atmosphere_image_prefix }}registry.atmosphere.dev/library/ovn-central:{{ atmosphere_release }}"
-  ovn_ovsdb_sb: "{{ atmosphere_image_prefix }}registry.atmosphere.dev/library/ovn-central:{{ atmosphere_release }}"
+  ovn_northd: "{{ atmosphere_image_prefix }}ghcr.io/vexxhost/ovn:v24.03.7-3@sha256:deb1966eff94d8da072a3647db63546722094deb3ef34b6b464609bcba61887a"
+  ovn_ovsdb_nb: "{{ atmosphere_image_prefix }}ghcr.io/vexxhost/ovn:v24.03.7-3@sha256:deb1966eff94d8da072a3647db63546722094deb3ef34b6b464609bcba61887a"
+  ovn_ovsdb_sb: "{{ atmosphere_image_prefix }}ghcr.io/vexxhost/ovn:v24.03.7-3@sha256:deb1966eff94d8da072a3647db63546722094deb3ef34b6b464609bcba61887a"
   pause: "{{ atmosphere_image_prefix }}registry.k8s.io/pause:3.9"
   percona_xtradb_cluster_haproxy: "{{ atmosphere_image_prefix }}docker.io/percona/haproxy:2.8.15"
   percona_xtradb_cluster_operator: "{{ atmosphere_image_prefix }}docker.io/percona/percona-xtradb-cluster-operator:1.18.0"
