--- a/charts/ovn/templates/deployment-northd.yaml
+++ b/charts/ovn/templates/deployment-northd.yaml
@@ -80,4 +80,10 @@ spec:
               value: ovn-ovsdb-sb
             - name: OVN_SSL_ENABLE
               value: "no"
+          volumeMounts:
+            - name: var-log-ovn
+              mountPath: /var/log/ovn
+      volumes:
+        - name: var-log-ovn
+          emptyDir: {}
 {{- end }}
