--- a/charts/ovn/templates/deployment-northd.yaml
+++ b/charts/ovn/templates/deployment-northd.yaml
@@ -83,7 +83,11 @@ spec:
           volumeMounts:
             - name: var-log-ovn
               mountPath: /var/log/ovn
+            - name: var-run-ovn
+              mountPath: /var/run/ovn
       volumes:
         - name: var-log-ovn
+          emptyDir: {}
+        - name: var-run-ovn
           emptyDir: {}
 {{- end }}
