fix: wait for a mutating webhook to be available
Signed-off-by: Tadas Sutkaitis <tadas.sutkaitis@vexxhost.com>

--- a/roles/cloudnative_pg/tasks/main.yml
+++ b/roles/cloudnative_pg/tasks/main.yml
@@ -22,3 +22,21 @@
         create_namespace: true
         kubeconfig: "{{ cloudnative_pg_barman_cloud_helm_kubeconfig }}"
         values: "{{ _cloudnative_pg_barman_cloud_helm_values | combine(cloudnative_pg_barman_cloud_helm_values, recursive=True) }}"
+
+# NOTE(fitbeard): We need to wait for the deployment to be available
+#                 and mutating webhook to be ready before applying any
+#                 CloudNativePG custom resources.
+- name: Wait for 'cloudnative-pg' deployment to be available
+  run_once: true
+  kubernetes.core.k8s_info:
+    api_version: apps/v1
+    kind: Deployment
+    name: "{{ cloudnative_pg_helm_release_name }}"
+    namespace: "{{ cloudnative_pg_helm_release_namespace }}"
+    kubeconfig: "{{ cloudnative_pg_helm_kubeconfig }}"
+    wait_sleep: 5
+    wait_timeout: 90
+    wait: true
+    wait_condition:
+      type: Available
+      status: true
