Add ironic to molecule aio
Change-Id: I527cdba6b2967b4c57789151fd4e244402ca191e
Signed-off-by: ricolin <rlin@vexxhost.com>

--- a/playbooks/generate_workspace.yml
+++ b/playbooks/generate_workspace.yml
@@ -330,6 +330,12 @@
             ram: 16384
             disk: 160
             vcpus: 8
+          - name: "baremetal"
+            ram: 0
+            disk: 0
+            vcpus: 0
+            extra_specs:
+              "CUSTOM_BAREMETAL": 1
 
     - name: Write new Nova configuration file to disk
       ansible.builtin.copy:
