--- a/roles/sushy/tasks/main.yml
+++ b/roles/sushy/tasks/main.yml
@@ -20,6 +20,7 @@
         kind: DaemonSet
         metadata:
           name: sushy
+          namespace: openstack
           labels:
             application: sushy
         spec:
