--- a/roles/sushy/tasks/main.yml
+++ b/roles/sushy/tasks/main.yml
@@ -39,7 +39,7 @@
               hostIPC: true
               dnsPolicy: ClusterFirstWithHostNet
               initContainers:
-                - name: build_emulation_vms
+                - name: build-emulation-vms
                   image: "{{ atmosphere_images['sushy'] | vexxhost.kubernetes.docker_image('ref') }}"
                   env:
                     - name: DEPENDENCY_SERVICE
