fix initContainers sg
Change-Id: Ie9680596f7e7fedf45d265f12b380f5f09cf03f1
Signed-off-by: ricolin <rlin@vexxhost.com>

--- a/roles/sushy/tasks/main.yml
+++ b/roles/sushy/tasks/main.yml
@@ -41,6 +41,9 @@
               initContainers:
                 - name: build-emulation-vms
                   image: "{{ atmosphere_images['sushy'] | vexxhost.kubernetes.docker_image('ref') }}"
+                  securityContext:
+                    privileged: true
+                    readOnlyRootFilesystem: false
                   env:
                     - name: DEPENDENCY_SERVICE
                       value: openstack:nova-api
